--- a/style.css
+++ b/style.css
@@ -75,14 +75,74 @@ header .menu-desktop a:hover {
   transform: scale(1.05);
 }
 
-header nav ul {
+header nav.menu-desktop ul {
   display: flex;
   gap: 20px;
   list-style: none;
 }
 
-header nav ul li {
+header nav.menu-desktop ul li {
   font-size: 1.2rem;
+}
+
+.overlay-menu {
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 888;
+  opacity: 0.5;
+  display: none;
+}
+
+.menu-mobile {
+  background: #0e0e0e;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 999;
+  width: 0%;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.menu-mobile.abrir-menu {
+  width: 70%;
+}
+
+.menu-mobile.abrir-menu ~ .overlay-menu {
+  display: block;
+}
+
+.menu-mobile .btn-fechar {
+  padding: 20px 5%;
+}
+
+.menu-mobile .btn-fechar i {
+  color: #44e868;
+  font-size: 30px;
+}
+
+.menu-mobile nav ul {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+}
+
+.menu-mobile nav ul li a {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 300;
+  list-style: none;
+  display: block;
+}
+
+.menu-mobile nav ul li a:hover {
+  background-color: #44e868;
+  color: #000;
 }
 
 /* INICIO */
@@ -366,13 +426,13 @@ footer p {
 }
 
 @media (max-width: 1100px) {
-  .menu-desktop,
-  .btn-contato {
-    display: none;
-  }
-
   .container {
     flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  header .container {
+    flex-direction: column;
     align-items: center;
   }
 
@@ -419,6 +479,22 @@ footer p {
 @media (max-width: 430px) {
   html {
     font-size: 0.8rem;
+  }
+
+  header .menu-desktop,
+  .btn-contato {
+    display: none;
+  }
+
+  header .container {
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+
+  .btn-abrir-menu-mobile i {
+    color: #44e868;
+    font-size: 45px;
   }
 
   .topo-do-site .txt-topo-site p {
