feito ajustes no html e css, adicionado icone no link dos projetos

--- a/styles/formulario.css
+++ b/styles/formulario.css
@@ -75,7 +75,7 @@ div.box-fale-comigo {
 }
 
 .box-fale-comigo p,
-a {
+.box-fale-comigo a {
   margin-top: 20px;
   color: #fff;
   text-decoration: none;
