--- a/styles/global.css
+++ b/styles/global.css
@@ -16,6 +16,11 @@ body {
   display: flex;
 }
 
+.linha-detalhe {
+  border-top: 1px solid #1c712f;
+  padding-top: 130px;
+}
+
 .btn-contato button {
   padding: 0.625rem 2.5rem;
   font-size: 1.125rem;
