--- a/styles/formacao.css
+++ b/styles/formacao.css
@@ -4,7 +4,7 @@ section.formacao {
 }
 
 section.formacao .container {
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   gap: 90px;
 }
