criado arquivo css com as cores do site

--- a/styles/formacao.css
+++ b/styles/formacao.css
@@ -1,6 +1,6 @@
 section.formacao {
   padding: 4.5rem 4%;
-  border-bottom: 1px solid #1e751b;
+  border-bottom: 1px solid var(--cor-p3);
 }
 
 section.formacao .container {
@@ -10,28 +10,28 @@ section.formacao .container {
 }
 
 .formacao .txt-formacao h2 > span {
-  color: #44e868;
+  color: var(--cor-p1);
 }
 
 .formacao .card-formacao {
   margin: 40px 0;
   padding: 20px;
   line-height: calc(1rem * 1.5);
-  background-color: #0e0e0e;
+  background-color: var(--cor-g04);
   border-radius: 10px;
-  box-shadow: 0 0 3px #44e868;
-  border-right: 15px solid #44e868;
+  box-shadow: 0 0 3px var(--cor-p1);
+  border-right: 15px solid var(--cor-p1);
 }
 
 .formacao .card-formacao h3 {
-  color: #fff;
+  color: var(--cor-g00);
   font-size: 1.25rem;
   line-height: 2.625rem;
   position: relative;
 }
 
 .formacao .card-formacao p {
-  color: #9c9c9c;
+  color: var(--cor-g01);
   font-size: 1rem;
   line-height: 1.5rem;
 }
@@ -39,7 +39,7 @@ section.formacao .container {
 .formacao .txt-formacao .card-formacao span {
   font-size: 0.875rem;
   line-height: 1.5rem;
-  color: #21b549;
+  color: var(--cor-p2);
 
   display: inline-block;
   margin-top: 20px;
