--- a/styles/formulario.css
+++ b/styles/formulario.css
@@ -35,7 +35,7 @@ form textarea {
   outline: 0;
   padding: 20px 15px;
   border-radius: 15px;
-  color: #fff;
+  color: var(--cor-g00);
   font-size: 1.125rem;
 }
 
@@ -52,7 +52,7 @@ form .btn-enviar input[type="submit"] {
   padding: 10px 20px;
   border-radius: 40px;
   width: 120px;
-  background-color: #44e868;
+  background-color: var(--cor-p1);
   color: #000;
   font-weight: 600;
   cursor: pointer;
@@ -77,6 +77,6 @@ div.box-fale-comigo {
 .box-fale-comigo p,
 .box-fale-comigo a {
   margin-top: 20px;
-  color: #fff;
+  color: var(--cor-g00);
   text-decoration: none;
 }
