--- a/styles/global.css
+++ b/styles/global.css
@@ -29,7 +29,7 @@ body {
   display: none;
   font-size: 24px;
   padding: 10px 20px;
-  background-color: #44e868;
+  background-color: var(--cor-p1);
   color: black;
   border-radius: 4px;
   cursor: pointer;
@@ -44,7 +44,7 @@ body {
   padding: 0.625rem 2.5rem;
   font-size: 1.125rem;
   font-weight: 600;
-  background-color: #44e868;
+  background-color: var(--cor-p1);
   border: 0;
   border-radius: 2.5rem;
   cursor: pointer;
@@ -53,23 +53,23 @@ body {
 
 button:hover,
 form .btn-enviar input[type="submit"]:hover {
-  box-shadow: 0 0 10px #3dd25e;
+  box-shadow: 0 0 10px var(--cor-p3);
   transform: scale(1.05);
 }
 
 h2.titulo {
-  color: #fff;
+  color: var(--cor-g00);
   font-size: 3.5rem;
   margin-bottom: 75px;
 }
 
 h2.titulo span {
-  color: #44e868;
+  color: var(--cor-p1);
 }
 
 footer p {
-  background-color: #0e0e0e;
+  background-color: var(--cor-g04);
   padding: 40px 4%;
   text-align: center;
-  color: #fff;
+  color: var(--cor-g00);
 }
