--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
 header {
   padding: 2.5rem 4%;
-  background-color: #0e0e0e;
+  background-color: var(--cor-g04);
 }
 
 header > .container {
@@ -21,7 +21,7 @@ header a {
 }
 
 header .menu-desktop a:hover {
-  color: #fff;
+  color: var(--cor-g00);
   transform: scale(1.05);
 }
 
@@ -36,7 +36,7 @@ header nav.menu-desktop ul li {
 }
 
 .overlay-menu {
-  background-color: #000;
+  background-color: var(--cor-g05);
   width: 100%;
   height: 100%;
   position: fixed;
@@ -52,7 +52,7 @@ header nav.menu-desktop ul li {
 }
 
 .menu-mobile {
-  background: #0e0e0e;
+  background: var(--cor-g04);
   height: 100vh;
   position: fixed;
   top: 0;
@@ -76,7 +76,7 @@ header nav.menu-desktop ul li {
 }
 
 .menu-mobile .btn-fechar i {
-  color: #44e868;
+  color: var(--cor-p1);
   font-size: 30px;
 }
 
@@ -95,6 +95,6 @@ header nav.menu-desktop ul li {
 }
 
 .menu-mobile nav ul li a:hover {
-  background-color: #44e868;
+  background-color: var(--cor-p1);
   color: #000;
 }
