--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -1,7 +1,7 @@
 section.inicio {
   padding: 4.5rem 4%;
-  background-color: #0e0e0e;
-  border-bottom: 1px solid #1e751b;
+  background-color: var(--cor-g04);
+  border-bottom: 1px solid var(--cor-p3);
 }
 
 section.inicio .container {
@@ -11,18 +11,18 @@ section.inicio .container {
 }
 
 .inicio .txt-inicio h1 {
-  color: #fff;
+  color: var(--cor-g00);
   font-size: 4.5rem;
   line-height: 5rem;
   max-width: 30ch;
 }
 
 .inicio .txt-inicio h1 span {
-  color: #44e868;
+  color: var(--cor-p1);
 }
 
 .inicio .txt-inicio p {
-  color: #9c9c9c;
+  color: var(--cor-g01);
   line-height: calc(1rem * 1.5);
   margin-top: 30px;
   margin-bottom: 30px;
@@ -38,7 +38,7 @@ section.inicio .container {
   height: 60px;
   border-radius: 50%;
   border: none;
-  background-color: #44e868;
+  background-color: var(--cor-p1);
   font-size: 1.375rem;
   cursor: pointer;
   transition: 0.2s;
