--- a/styles/global.css
+++ b/styles/global.css
@@ -73,3 +73,20 @@ footer p {
   text-align: center;
   color: var(--cor-g00);
 }
+
+@media (max-width: 1100px) {
+  .container {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  h2.titulo {
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 550px) {
+  html {
+    font-size: 0.8rem;
+  }
+}
