--- a/styles/header.css
+++ b/styles/header.css
@@ -98,3 +98,41 @@ header nav.menu-desktop ul li {
   background-color: var(--cor-p1);
   color: #000;
 }
+
+@media (max-width: 1100px) {
+  header {
+    padding: 2.5rem 4% 0 4%;
+  }
+
+  header .container {
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+  }
+
+  .btn-abrir-menu-mobile {
+    display: block;
+  }
+}
+
+@media (max-width: 550px) {
+  #voltar-ao-topo {
+    display: none;
+  }
+
+  header .menu-desktop,
+  header .btn-contato {
+    display: none;
+  }
+
+  header .container {
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+
+  .btn-abrir-menu-mobile i {
+    color: var(--cor-p1);
+    font-size: 45px;
+  }
+}
