feat: pointer no botao de contato

--- a/styles/formulario.css
+++ b/styles/formulario.css
@@ -58,6 +58,7 @@ form button.btn-contato {
   border-radius: 40px;
   font-size: 1rem;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .btn-container {
