--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
-@import "./global.css";
-@import "./header.css";
-@import "./cores.css";
+@import "./global/global.css";
+@import "./global/header.css";
+@import "./global/cores.css";
 
 @import "./inicio.css";
 @import "./formacao.css";
