--- a/styles/global/cores.css
+++ b/styles/global/cores.css
@@ -2,6 +2,7 @@
   --cor-p1: #44e868;
   --cor-p2: #18b549;
   --cor-p3: #1e751b;
+  --gradiente: linear-gradient(85.95deg, #44e868 3.35%, #32d257 96.73%);
 
   --cor-g05: #000000;
   --cor-g04: #0e0e0e;
@@ -10,3 +11,4 @@
   --cor-g01: #9c9c9c;
   --cor-g00: #ffffff;
 }
+/* Rectangle 1 */
