--- a/assets/css/projetos.css
+++ b/assets/css/projetos.css
@@ -73,6 +73,12 @@
   margin-left: 5px;
 }
 
+@media (max-width: 1100px) {
+  .projetos .container {
+    align-items: normal;
+  }
+}
+
 @media (max-width: 550px) {
   section.projetos .box-projetos {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
