--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -59,7 +59,7 @@ form .btn-enviar input[type='submit']:hover {
 
 h2.titulo {
 	color: var(--cor-g00);
-	font-size: 3.2rem;
+	font-size: 3.5rem;
 	margin-bottom: 75px;
 }
 
@@ -100,6 +100,10 @@ footer p {
 
 @media (max-width: 550px) {
 	html {
-		font-size: 0.7rem;
+		font-size: 0.8rem;
+	}
+
+	h2.titulo {
+		font-size: 2.8rem;
 	}
 }
