--- a/assets/css/global/animacoes.css
+++ b/assets/css/global/animacoes.css
@@ -11,6 +11,17 @@
 	transform: translate3d(-20px, 0, 0);
 }
 
+.js .js-scroll {
+	opacity: 0;
+	transform: translate3d(-30px, 0, 0);
+	transition: 0.3s;
+}
+
+.js .js-scroll.ativo {
+	opacity: 1;
+	transform: translate3d(0, 0, 0);
+}
+
 /* 7 Adicione o CSS Essencial abaixo */
 .js [data-anime] {
 	opacity: 0;
