:art: feat: adicionar imagens webp

--- a/assets/css/projetos.css
+++ b/assets/css/projetos.css
@@ -15,23 +15,19 @@
 }
 
 .box-projetos .img-projeto:nth-child(1) {
-  background-image: url(../imgs/bikcraft.jpg);
+  background-image: url(../imgs/bikcraft.webp);
 }
 
 .box-projetos .img-projeto:nth-child(2) {
-  background-image: url(../imgs/canesfit.jpg);
+  background-image: url(../imgs/canesfit.webp);
 }
 
 .box-projetos .img-projeto:nth-child(3) {
-  background-image: url(../imgs/surfnat.png);
+  background-image: url(../imgs/surfnat.webp);
 }
 
 .box-projetos .img-projeto:nth-child(4) {
-  background-image: url(../imgs/wildbeast.jpg);
-}
-
-.box-projetos .img-projeto:nth-child(5) {
-  background-image: url(../img/projeto5.jpg);
+  background-image: url(../imgs/wildbeast.webp);
 }
 
 .img-projeto {
