feat: novo projeto add - animais fantasticos

--- a/assets/css/projetos.css
+++ b/assets/css/projetos.css
@@ -19,7 +19,7 @@
 }
 
 .box-projetos .img-projeto:nth-child(2) {
-  background-image: url(../imgs/canesfit.webp);
+  background-image: url(../imgs/animaisfantasticos.webp);
 }
 
 .box-projetos .img-projeto:nth-child(3) {
