feat: adicionar novo projeto rentalx

--- a/assets/css/projetos.css
+++ b/assets/css/projetos.css
@@ -19,7 +19,7 @@
 }
 
 .box-projetos .img-projeto:nth-child(2) {
-  background-image: url(../imgs/animaisfantasticos.webp);
+  background-image: url(../imgs/rentalx.webp);
 }
 
 .box-projetos .img-projeto:nth-child(3) {
@@ -27,7 +27,7 @@
 }
 
 .box-projetos .img-projeto:nth-child(4) {
-  background-image: url(../imgs/wildbeast.webp);
+  background-image: url(../imgs/animaisfantasticos.webp);
 }
 
 .img-projeto {
