adicionar seção de certificados

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,5 +6,6 @@
 @import './inicio.css';
 @import './formacao.css';
 @import './projetos.css';
+@import './certificados.css';
 @import './formulario.css';
 
