--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -1,109 +1,113 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Poppins', sans-serif;
-	list-style: none;
-	text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  list-style: none;
+  text-decoration: none;
 }
 
 html {
-	scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-	background-color: #131313;
-	height: 100vh;
+  background-color: #131313;
+  height: 100vh;
 }
 
 .container {
-	max-width: 1280px;
-	margin: 0 auto;
-	display: flex;
+  max-width: 1280px;
+  margin: 0 auto;
+  display: flex;
 }
 
 #voltar-ao-topo {
-	position: fixed;
-	bottom: 20px;
-	right: 20px; /* Mudança para o lado direito */
-	display: none;
-	font-size: 24px;
-	padding: 10px 20px;
-	background: var(--gradiente);
-	color: black;
-	border-radius: 4px;
-	cursor: pointer;
-	z-index: 1;
+  position: fixed;
+  bottom: 20px;
+  right: 20px; /* Mudança para o lado direito */
+  display: none;
+  font-size: 24px;
+  padding: 10px 20px;
+  background: var(--gradiente);
+  color: black;
+  border-radius: 4px;
+  cursor: pointer;
+  z-index: 1;
 }
 
 #voltar-ao-topo:hover {
-	opacity: 0.9;
+  opacity: 0.9;
 }
 
 .btn-contato button {
-	padding: 0.625rem 2.5rem;
-	font-size: 1.125rem;
-	font-weight: 600;
-	background: var(--gradiente);
-	border: 0;
-	border-radius: 2.5rem;
-	cursor: pointer;
-	transition: 0.2s ease-in-out;
+  padding: 0.625rem 2.5rem;
+  font-size: 1.125rem;
+  font-weight: 600;
+  background: var(--gradiente);
+  border: 0;
+  border-radius: 2.5rem;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
 }
 
 button:hover,
-form .btn-enviar input[type='submit']:hover {
-	box-shadow: 0 0 10px var(--cor-p3);
-	transform: scale(1.05);
+form .btn-enviar input[type="submit"]:hover {
+  box-shadow: 0 0 10px var(--cor-p3);
+  transform: scale(1.05);
 }
 
 h2.titulo {
-	color: var(--cor-g00);
-	font-size: 3.5rem;
-	margin-bottom: 75px;
+  color: var(--cor-g00);
+  font-size: 3.5rem;
+  margin-bottom: 75px;
 }
 
 h2.titulo span {
-	color: var(--cor-p1);
+  color: var(--cor-p1);
+}
+
+footer {
+  border-top: 1px solid var(--cor-p3);
 }
 
 footer p {
-	background-color: var(--cor-g04);
-	padding: 40px 4%;
-	text-align: center;
-	color: var(--cor-g00);
+  background-color: var(--cor-g04);
+  padding: 40px 4%;
+  text-align: center;
+  color: var(--cor-g00);
 }
 
 ::-webkit-scrollbar {
-	width: 8px;
-	height: 8px;
+  width: 8px;
+  height: 8px;
 }
 
 ::-webkit-scrollbar-track {
-	background-color: var(--cor-g00);
+  background-color: var(--cor-g00);
 }
 
 ::-webkit-scrollbar-thumb {
-	background: var(--gradiente);
+  background: var(--gradiente);
 }
 
 @media (max-width: 1100px) {
-	.container {
-		flex-direction: column-reverse;
-		align-items: center;
-	}
+  .container {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
 
-	h2.titulo {
-		margin-top: 0;
-	}
+  h2.titulo {
+    margin-top: 0;
+  }
 }
 
 @media (max-width: 550px) {
-	html {
-		font-size: 0.8rem;
-	}
+  html {
+    font-size: 0.8rem;
+  }
 
-	h2.titulo {
-		font-size: 2.8rem;
-	}
+  h2.titulo {
+    font-size: 2.8rem;
+  }
 }
