--- a/assets/css/certificados.css
+++ b/assets/css/certificados.css
@@ -16,6 +16,7 @@
   display: block;
   max-width: 100%;
   max-height: 500px;
+  border-radius: 5px;
 }
 
 .badges {
@@ -25,15 +26,19 @@
 
 .certificacoes h3 {
   font-size: 2rem;
-  color: var(--cor-p2);
+  color: white;
   margin-top: 40px;
+}
+
+.certificacoes span {
+  color: var(--cor-p1);
 }
 
 .badges {
   display: flex;
   flex-wrap: wrap;
-  gap: 5px;
-  border-radius: 10px;
+  gap: 10px;
+  border-radius: 5px;
   padding: 20px 20px 0 20px;
   background-color: #fafafa;
   box-shadow: 0 0 3px var(--cor-p1);
@@ -43,7 +48,7 @@
   display: block;
   flex: 1;
   max-width: 100%;
-  max-height: 100%;
+
 }
 
 @media (width <= 580px) {
