--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -1,169 +1,101 @@
 header {
-	padding: 2.5rem 4%;
-	background-color: var(--cor-g04);
+  padding: 2.5rem 4%;
+  background-color: var(--cor-g04);
 }
 
 header > .container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header .logo {
-	transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
 }
 
 header .logo a {
-	padding: 0;
+  padding: 0;
 }
 
-header .logo:hover{
-	transform: scale(1.1);
+header .logo:hover {
+  transform: scale(1.1);
 }
 
-.menu-desktop {
-	display: flex;
-	gap: 40px;
-	align-items: center;
+#menu {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
-.menu-desktop ul {
-	display: flex;
-	gap: 40px;
-	list-style: none;
+#menu ul {
+  display: flex;
+  gap: 40px;
+  list-style: none;
 }
 
-.menu-desktop ul li {
-	font-size: 1.2rem;
+#menu ul li {
+  font-size: 1.2rem;
 }
 
-.menu-desktop a {
-	display: inline-block;
-	position: relative;
-	color: #9c9c9c;
-	text-decoration: none;
-	padding: 0.5rem 0;
+#menu a {
+  display: inline-block;
+  position: relative;
+  color: #9c9c9c;
+  text-decoration: none;
+  padding: 0.5rem 0;
 }
 
-.menu-desktop a:after {
-	content: '';
-	display: block;
-	height: 2px;
-	width: 0px;
-	background: var(--cor-g00);
-	margin-top: 4px;
-	transition: 0.3s;
-	position: absolute;
+#menu a:after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 0px;
+  background: var(--cor-g00);
+  margin-top: 4px;
+  transition: 0.3s;
+  position: absolute;
 }
 
-.menu-desktop a:hover::after {
-	width: 100%;
+#menu a:hover::after {
+  width: 100%;
 }
 
-.menu-desktop div.btn-contato a:hover::after {
-	width: 0px;
+#menu .contato-destaque {
+  color: var(--cor-p1);
 }
 
-.overlay-menu {
-	background-color: var(--cor-g05);
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 888;
-	opacity: 0.5;
-	display: none;
+#menu .contato-destaque::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 100%;
+  background: var(--cor-p1);
+  margin-top: 4px;
+  transition: 0.3s;
+  position: absolute;
 }
 
-.btn-abrir-menu-mobile {
-	display: none;
-}
-
-.menu-mobile {
-	background: var(--cor-g04);
-	height: 100vh;
-	position: fixed;
-	top: 0;
-	right: 0;
-	z-index: 999;
-	width: 0%;
-	overflow: hidden;
-	transition: 0.5s;
-}
-
-.menu-mobile.abrir-menu {
-	width: 70%;
-}
-
-.menu-mobile.abrir-menu ~ .overlay-menu {
-	display: block;
-}
-
-.menu-mobile .btn-fechar {
-	padding: 20px 5%;
-}
-
-.menu-mobile .btn-fechar i {
-	color: var(--cor-p1);
-	font-size: 30px;
-}
-
-.menu-mobile nav ul {
-	display: flex;
-	flex-direction: column;
-	text-align: right;
-	gap: 25px;
-}
-
-.menu-mobile nav ul li a {
-	color: #fff;
-	font-size: 20px;
-	font-weight: 300;
-	list-style: none;
-	display: block;
-	padding: 5px;
-}
-
-.menu-mobile nav ul li a:hover {
-	background-color: var(--cor-p1);
-	color: #000;
+#menu .contato-destaque:hover {
+  transform: scale(1.05); /* Pequeno efeito de zoom no hover */
+  transition: all 0.3s ease;
 }
 
 @media (max-width: 1100px) {
-	header {
-		padding: 2.5rem 4% 0 4%;
-	}
+  header {
+    padding: 2.5rem 4% 0 4%;
+  }
 
-	header .container {
-		flex-direction: column;
-		align-items: center;
-		gap: 25px;
-	}
-
-	.btn-abrir-menu-mobile {
-		display: block;
-	}
+  header .container {
+    flex-direction: row;
+    align-items: center;
+    gap: 25px;
+  }
 }
 
 @media (max-width: 550px) {
-	#voltar-ao-topo {
-		display: none;
-	}
-
-	header .menu-desktop,
-	header .btn-contato {
-		display: none;
-	}
-
-	header .container {
-		flex-direction: row;
-		align-items: center;
-		justify-content: space-between;
-	}
-
-	.btn-abrir-menu-mobile i {
-		color: var(--cor-p1);
-		font-size: 45px;
-	}
+  header .container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
