refatorar código js e adicionar novo perfil

--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -49,6 +49,7 @@
 }
 
 .inicio .img-inicio img {
+	width: 530px;
 	max-width: 100%;
 	position: relative;
 	animation: flutuar 2s ease-in-out infinite alternate;
